@@ -4,7 +4,7 @@ import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.List;
+import java.util.Arrays;
 
 import org.assertj.core.api.WithAssertions;
 
@@ -27,7 +27,7 @@ public class SearchParticipantIDTest implements WithAssertions {
 
     @Test
     public void followsConventionWithRandoms () {
-        ArrayList<String> keys = new ArrayList<String>(List.of("601683", "601680"));
+        ArrayList<String> keys = new ArrayList<String>(Arrays.asList("601683", "601680"));
         ArrayList<PDF> files = createArraylistWithPDFS(
             createPDFWithName("1409121490-602637_Beth_Morales-Horton_601683_Assignment1_81305512.pdf"),
             createPDFWithName("1410855605-602322_Clifton_Bowen_601680_81380485.pdf")
@@ -38,7 +38,7 @@ public class SearchParticipantIDTest implements WithAssertions {
 
     @Test
     public void followsConventionWithoutRandoms () {
-        ArrayList<String> keys = new ArrayList<String>(List.of("601683", "601680"));
+        ArrayList<String> keys = new ArrayList<String>(Arrays.asList("601683", "601680"));
         ArrayList<PDF> files = createArraylistWithPDFS(
             createPDFWithName("Beth_Morales-Horton_601683_Assignment1_81305512.pdf"),
             createPDFWithName("Clifton_Bowen_601680_81380485.pdf")
@@ -49,7 +49,7 @@ public class SearchParticipantIDTest implements WithAssertions {
 
     @Test
     public void noParticipantIDS () {
-        ArrayList<String> keys = new ArrayList<String>(List.of("601683", "601680"));
+        ArrayList<String> keys = new ArrayList<String>(Arrays.asList("601683", "601680"));
         ArrayList<PDF> files = createArraylistWithPDFS(
             createPDFWithName("Beth_Morales-Horton_Assignment1_81305512.pdf"),
             createPDFWithName("Clifton_Bowen_81380485.pdf")
